--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,31 +14,7 @@
     </div>
 
     {% include footer.html %}
-    <script type="text/javascript">
-    (function(w, d) {
-      var liWithMenu = d.querySelectorAll('.has-submenu');
-      for(var i=0; i<liWithMenu.length; i++) {
-        liWithMenu[i].addEventListener('click', function(e) {
-          e.stopPropagation();
-          var submenu = this.querySelector('.submenu');
-          //this.classList.toggle('link-active');
-          if(submenu) {
-            if(submenu.style.display === 'block') {
-              submenu.style.display = 'none';
-              return;
-            }
-            submenu.style.display = 'block';
-          }
-        });
-      }
-      d.addEventListener('click', function(e) {
-        var submenus = d.querySelectorAll('.submenu');
-        for(var i=0;i<submenus.length;i++) {
-          submenus[i].style.display = 'none';
-        }
-      });
-    })(window, document);
-    </script>
+    <script type="text/javascript" src="/js/script.js"></script>
     {% if site.ga_id %}
       {% include analytics.html %}
     {% endif %}
