--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,3 +45,7 @@
   </div>
 
 </footer>
+<script type="text/javascript" src="/js/script.js"></script>
+{% if site.ga_id %}
+  {% include analytics.html %}
+{% endif %}
