--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -66,7 +66,7 @@ figcaption {
  * Lists
  */
 ul, ol {
-    margin-left: $spacing-unit;
+    margin-left: $spacing-unit - 25px;
 }
 
 li {
@@ -112,7 +112,7 @@ a {
 blockquote {
     color: $grey-color;
     border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
+    padding-left: $spacing-unit / 4;
     font-size: 18px;
     letter-spacing: -1px;
     font-style: italic;
