--- a/css/main.scss
+++ b/css/main.scss
@@ -58,7 +58,7 @@ $on-laptop:        800px;
     padding: 5px 10px;
     border: 1px solid #ccc;
 
-    .btn-large {
+    &.btn-large {
         font-size: 1.2em;
         padding: 10px 20px;
     }
