--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,14 @@
 <footer class="site-footer">
-
   <div class="wrapper">
-
     <!--<h2 class="footer-heading">{{ site.title }}</h2>-->
-
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><em>Powered by <a href="http://bitwiser.in/jekyll-read/" target="_blank">Jekyll-Read</a> theme.</em></li>
         </ul>
       </div>
-
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           {% if site.github_username %}
@@ -19,16 +16,14 @@
             {% include icon-github.html username=site.github_username %}
           </li>
           {% endif %}
-
           {% if site.twitter_username %}
           <li>
             {% include icon-twitter.html username=site.twitter_username %}
           </li>
           {% endif %}
-          <li>Subscibe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></li>
+          <li>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></li>
         </ul>
       </div>
-
       <div class="footer-col footer-col-3">
         <p>{{ site.description }}</p>
         {% if site.mailchimp and site.mailchimp != "" %}
@@ -41,11 +36,9 @@
         {% endif %}
       </div>
     </div>
-
   </div>
-
 </footer>
-<script type="text/javascript" src="/js/script.js"></script>
+<script type="text/javascript" src="{{ "/js/script.js" | prepend: site.baseurl | prepend: site.url}}"></script>
 {% if site.ga_id %}
   {% include analytics.html %}
 {% endif %}
