--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <link href='https://fonts.googleapis.com/css?family=Coustard' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
@@ -32,8 +32,8 @@
   <meta property="og:image" content="{{page.cover}}" />
   <meta property="twitter:image" content="{{page.cover}}" />
   {% else %}
-  <meta name="og:image" content="{{ site.base_url }}/img/sharer.png" />
-  <meta name="twitter:image" content="{{ site.base_url }}/img/sharer.png" />
+  <meta name="og:image" content="{{ "sharer.png" | prepend: site.baseurl | prepend: site.url }}" />
+  <meta name="twitter:image" content="{{ "sharer.png" | prepend: site.baseurl | prepend: site.url }}" />
   {% endif %}
   <meta name="twitter:card" content="summary" />
 </head>
