--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,24 @@
 <header class="site-header">
-
   <div class="wrapper">
-
     <h1 class="site-title">
       <a href="{{ site.baseurl }}/">{{ site.title }}</a>
     </h1>
   </div>
   <nav class="site-nav">
     <ul class="trigger">
-      <li class="{% if page.url == '/index.html' %}link-active{% endif %}"><a class="page-link" href="{{ site.baseurl }}/">Home</a></li>
+      <li class="{% if page.url == '/index.html' %}link-active{% endif %}"><a class="page-link" href="{{ site.url }}/">Home</a></li>
+      {% if site.pages and site.pages | size > 0 %}
+      <li class="has-submenu">
+        <a class="page-link hover-link" href="#pages">Pages &gt;</a>
+        <ul class="submenu">
+        {% for my_page in site.pages %}
+          {% if my_page.title %}
+          <li class="{% if my_page.url == page.url %}link-active{% endif %}"><a class="page-link" href="{{ my_page.url | prepend: site.baseurl | prepend: site.url }}">{{ my_page.title }}</a></li>
+          {% endif %}
+        {% endfor %}
+        </ul>
+      </li>
+      {% endif %}
       {% if site.data.projects and site.data.projects | size > 0 %}
       <li class="has-submenu">
         <a class="page-link hover-link" href="#projects">Projects &gt;</a>
@@ -19,12 +29,6 @@
         </ul>
       </li>
       {%  endif %}
-      {% for my_page in site.pages %}
-        {% if my_page.title %}
-        <li class="{% if my_page.url == page.url %}link-active{% endif %}"><a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
-        {% endif %}
-      {% endfor %}
     </div>
   </nav>
-
 </header>
