--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   </div>
   <nav class="site-nav">
     <ul class="trigger">
-      <li class="{% if page.url == '/index.html' %}link-active{% endif %}"><a class="page-link" href="{{ site.url }}/">Home</a></li>
+      <li class="{% if page.url == '/index.html' %}link-active{% endif %}"><a class="page-link" href="{{ site.baseurl | prepend:site.url }}/">Home</a></li>
       {% if site.data.projects and site.data.projects | size > 0 %}
       <li class="has-submenu">
         <a class="page-link hover-link" href="#projects">Projects &gt;</a>
