--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -3,10 +3,17 @@
  */
 .highlight {
     background: #fff;
+    border: 1px solid $grey-color-light;
+
     @extend %vertical-rhythm;
 
     .highlighter-rouge & {
       background: #eef;
+    }
+
+    .lineno {
+        border-right: 1px solid $grey-color-light;
+        padding-right: 2px;
     }
 
     .c     { color: #998; font-style: italic } // Comment
