--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,7 +133,7 @@ code {
     //border: 1px solid $grey-color-light;
     border: none;
     border-radius: 3px;
-    background-color: #fff;
+    //background-color: #fff;
 }
 
 code {
