--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
  * Syntax highlighting styles
  */
 .highlight {
-    background: #fff;
+    background: #F9F9F9;
     border: 1px solid $grey-color-light;
 
     @extend %vertical-rhythm;
