--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -387,6 +387,11 @@
     }
 }
 
+.reading-time {
+    font-size: 0.8em;
+    margin: 0;
+}
+
 .post-title {
     font-size: 2.5em;
     letter-spacing: 0.5px;
