--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,9 +38,9 @@
   <meta name="twitter:card" content="summary" />
   {% if site.disqus %}
   <script type="text/javascript">
-    window.APP = {
-      PAGE_URL: "{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}",
-      PAGE_IDENTIFIER: "{{page.url}}"
+    var disqus_config = function () {
+        this.page.url = "{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}";
+        this.page.identifier = "{{page.url}}";
     };
   </script>
   {% endif %}
