--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
         </ul>
       </li>
       {%  endif %}
-    </div>
+      <li><a href="/resume/" class="page-link">My Resume´</a></li>
+    </ul>
   </nav>
 </header>
