RTE part 1 blog post added

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -428,6 +428,12 @@
             font-size: 18px;
         }
     }
+
+    img {
+        display: block;
+        margin: 0 auto;
+        border: 1px solid #eee;
+    }
 }
 
 .post {
