Fix code styling

--- a/css/main.scss
+++ b/css/main.scss
@@ -79,7 +79,7 @@ $on-laptop:        800px;
     }
 
     code {
-        background: $code-bg-color;
+        background: transparent;
 
         .code {
             padding-left: 10px;
