--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,8 +32,8 @@
   <meta property="og:image" content="{{page.cover}}" />
   <meta property="twitter:image" content="{{page.cover}}" />
   {% else %}
-  <meta name="og:image" content="{{ "sharer.png" | prepend: site.baseurl | prepend: site.url }}" />
-  <meta name="twitter:image" content="{{ "sharer.png" | prepend: site.baseurl | prepend: site.url }}" />
+  <meta name="og:image" content="{{ "/sharer.png" | prepend: site.baseurl | prepend: site.url }}" />
+  <meta name="twitter:image" content="{{ "/sharer.png" | prepend: site.baseurl | prepend: site.url }}" />
   {% endif %}
   <meta name="twitter:card" content="summary" />
   {% if site.disqus %}
