--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
           <li><em>Powered by <a href="http://bitwiser.in/Jekyll-Read/" target="_blank">Jekyll-Read</a> theme.</em></li>
+          <li><small>All code snippets used in tutorials are <a href="https://github.com/brijeshb42/brijeshb42.github.io/blob/master/LICENSE">MIT licensed</a></small></li>
         </ul>
       </div>
       <div class="footer-col footer-col-2">
